Fix IDE Maven configuration warnings.